style.css
* {
	box-sizing: border-box;
}
html, body {
	margin: 0;
	padding: 0;
}
body, input, select, option, textarea, button {
	font-family: sans-serif;
	font-size: 16px;
}
body {
	margin: 10px;
}

:-ms-input-placeholder {
	color: #aaa;
}
::-moz-placeholder {
	color: #888;
}
::-webkit-input-placeholder {
	color: #bbb;
}

input:not([type="checkbox"]):not([type="radio"]):not([type="number"]) {
	width: 10em;
	max-width: 100%;
}
input:not([type="checkbox"]):not([type="radio"]),
select {
	padding: 4px;
}
input[type="number"] {
	width: 2em;
	text-align: center;
	-moz-appearance: textfield;
}
input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
	-webkit-appearance: none;
	appearance: none;
	margin: 0;
}

button {
	padding: 4px;
}
button.submit {
	font-weight: bold;
	color: green;
}
button.delete {
	color: #c00;
}

.message {
	background-color: green;
	color: white;
	padding: 10px;

	position: sticky;
	top: 10px;
	left: 10px;
	right: 10px;
}
.message.error {
	background-color: red;
}

/**
 * List sorting
 */

th[data-sort] {
	cursor: pointer;
	white-space: nowrap;
}
th[data-sort]:after {
	content: " ⇕";
}
th[data-sort]:not([data-sorting]):after {
	color: #bbb;
}

/**
 * List filters
 */

.index-filters {
	display: flex;
}
.index-filters > * {
	flex: 1;
	display: block;
	width: 100%;
}
.index-filters > * + * {
	margin-left: .5em;
}

/**
 * List ratings
 */

tr.rating-1 td.rating,
.rating.rating-1 {
	background: red !important;
}
tr.rating-1 {
	border-right: solid 5px red !important;
}
tr.rating-2 td.rating,
.rating.rating-2 {
	background: orange !important;
}
tr.rating-2 {
	border-right: solid 5px orange !important;
}
tr.rating-3 td.rating,
.rating.rating-3 {
	background: yellow !important;
}
tr.rating-3 {
	border-right: solid 5px yellow !important;
}
tr.rating-4 td.rating,
.rating.rating-4 {
	background: lime !important;
}
tr.rating-4 {
	border-right: solid 5px lime !important;
}
tr.rating-5 td.rating,
.rating.rating-5 {
	background: green !important;
	color: white !important;
}
tr.rating-5 {
	border-right: solid 5px green !important;
}

@media (orientation: portrait) and (max-width: 600px) {
	.hide-on-small {
		display: none;
	}
}
@media (orientation: landscape), (min-width: 600px) {
	.hide-on-big {
		display: none;
	}
}

/**
 * Library
 */

table {
	border-collapse: collapse;
	width: 100%;
}
tr.search-hide {
	display: none;
}
th {
	background-color: #ddd;
}
th:not([align]) {
	text-align: left;
}
th, td {
	padding: 5px 10px;
	border: solid 1px #ccc;
}
tbody tr:nth-child(odd) td {
	background-color: #f7f7f7;
}
tbody tr:nth-child(odd).hilited td {
	background-color: #BDDFEB;
}
tbody tr:nth-child(even) td {
	background-color: #eee;
}
tbody tr:nth-child(even).hilited td {
	background-color: lightblue;
}
.summary:not(:empty) + .notes:not(:empty) {
	padding-top: .25em;
	border-top: solid 1px white;
	margin-top: .25em;
}
.notes {
	font-style: italic;
}
div.expandable {
	max-width: 30em;
	cursor: pointer;
}
div.expandable:not(.expanded) {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

/**
 * Book form
 */

label[for] {
	display: block;
	vertical-align: top;
}
.form-widget {
	display: inline-block;
}
.form-widget label {
	display: inline;
}
.form-widget label:after {
	content: '\A';
	white-space: pre;
}
.book-form input:not([type="checkbox"]):not([type="radio"]):not([type="number"]) {
	width: 30em;
}
input.pubyear,
input.pages {
	width: 4em;
}
.book-form textarea {
	width: 37.25em;
	max-width: 100%;
}

.book-form output {
	display: inline-block;
	max-width: 37.25em;
	max-height: 10em;
	overflow: auto;
}
.book-form output:empty {
	display: none;
}

.p.search {
	margin-left: -10px;
	margin-right: -10px;
	background-color: #eee;
	padding: 10px;
}
.p.search input {
	width: calc(100% - 2em);
}
.results-container {
	display: inline-block;
	position: relative;
}
.results-container:not(.searching):not(.results) {
	display: none;
}
.results-container img {
	position: absolute;
	top: 0;
	left: 2px;
}
:not(.searching) > img {
	display: none;
}

#results {
	margin: 0;
	padding: 0;
	border: solid 1px #999;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}
#results:before {
	display: block;
	content: attr(data-num-results) " results...";
	padding: 5px 8px;
	padding-right: 2em;
	background-color: #ccc;
	border-bottom: solid 1px #000;
	font-weight: bold;
	white-space: nowrap;
	min-width: 12em;
}
:not(.results) > #results {
	display: none;
}
#results li {
	list-style: none;
	display: block;
}
#results a {
	display: block;
	padding: 5px 8px;
	color: inherit;
	text-decoration: inherit;
	background-color: #f7f7f7;
	color: #000;
	max-width: calc(100vw - 20px);
}
#results a {
	white-space: nowrap;
	overflow: hidden;
	overflow-x: auto;
	x-text-overflow: ellipsis;
}
#results li:nth-child(even) a {
	background-color: #e7e7e7;
}
#results li:nth-child(1n) a:hover,
#results li:nth-child(1n) a:focus {
	background-color: #d7d7d7;
	outline: solid 1px black;
}
#results a .author-title {
	font-weight: bold;
}
#results a .subtitle {
	color: #777;
}
#results a .classification {
	color: #aaa;
}

@media (min-width: 600px) {
	label[for] {
		display: inline-block;
		min-width: 7em;
	}

	.p.search input {
		width: 28em;
	}

	#results {
		position: absolute;
		top: 0;
		left: 0;
		margin-top: -0.5em;
		margin-left: 3em;
	}
	#results a {
		max-width: 30em;
	}
}

